Deleted update groups endpoints and reworked responces